Work on initial styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,31 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   background-color: #fff;
+ }
+
+ .home-container {
+   background-color: #000;
+   display: flex;
+ }
+
+ .home-side-container {
+   display: flex;
+   flex-direction: column;
+ }
+
+ .home-main {
+   border-right: 10px solid #000;
+   background-image: url("https://images.unsplash.com/photo-1493995055064-702227616052?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9fc7e95a9b14416091269a9f1644cc01&auto=format&fit=crop&w=668&q=80");
+ }
+
+ .home-side-top {
+   background-image: url("https://images.unsplash.com/photo-1498049860654-af1a5c566876?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ee039d16c1a1638867bb1cc95bf3b833&auto=format&fit=crop&w=1650&q=80");
+ }
+
+ .home-side-bottom {
+   border-top: 10px solid #000;
+   background-color: #fff;
+ }
