--- a/app/views/index.erb.html
+++ b/app/views/index.erb.html
@@ -7,15 +7,8 @@
   <section class="home-side">
     <section class="home-side-top"></section>
     <section class="home-side-bottom">
-      <ul>
-        <% @companies.each do |company| %>
-        <li class=company_<%= company.id %>>
-          <%= link_to company.name, company_path(company) %>:
-          <%= link_to "Edit", edit_company_path(company) %>
-          <%= link_to "Delete", company_path(company), method: "delete" %>
-        </li>
-        <% end %>
-      </ul>
+      <h1>Job Tracker</h1>
+      <a href="/companies">Home</a>
     </section>
   </section>
 </main>
