--- a/app/views/welcome/index.erb.html
+++ b/app/views/welcome/index.erb.html
@@ -5,10 +5,11 @@
 <main class="home-container">
   <section class="home-main"></section>
   <section class="home-side">
-    <section class="home-side-top"></section>
-    <section class="home-side-bottom">
-      <h1>Job Tracker</h1>
-      <a href="/companies">Home</a>
+    <section class="home-side-container">
+      <section class="home-side-top"></section>
+      <section class="home-side-bottom">
+        <h1>Job Tracker</h1>
+      </section>
     </section>
   </section>
 </main>
