Work on CRUD functionality

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
     <section class="home-side-container">
       <section class="home-side-top"></section>
       <section class="home-side-bottom">
-        <h1>Job Tracker</h1>
+        <h1> <%= link_to "Job Tracker", companies_path %></h1>
       </section>
     </section>
   </section>
