--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,3 +64,17 @@
    text-emphasis: bold;
    margin-right: 350px;
  }
+
+ a {
+   text-decoration: none;
+   color: #898989;
+ }
+
+ a:hover {
+   text-decoration: underline;
+   color: #545c42;
+ }
+
+ a:active {
+   color: #5da271;
+ }
