--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,8 @@
    background-image: url("https://images.unsplash.com/photo-1498049860654-af1a5c566876?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ee039d16c1a1638867bb1cc95bf3b833&auto=format&fit=crop&w=1650&q=80");
    height: 33%;
    width: 100%;
-   background-size: cover
+   background-size: cover;
+   transition: 3s ease;
  }
 
  .home-side-bottom {
@@ -60,6 +61,52 @@
  }
 
  .home-side-bottom h1 {
+   font-size: 40pt;
+   text-emphasis: bold;
+   margin-right: 350px;
+ }
+
+ .main-container {
+   background-color: #000;
+   display: flex;
+   width: 100%;
+   height: 100%;
+ }
+
+ .main-side-container {
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   height: 810px;
+ }
+
+ .main-left {
+   border-right: 10px solid #000;
+   background-image: url("https://images.unsplash.com/photo-1493995055064-702227616052?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9fc7e95a9b14416091269a9f1644cc01&auto=format&fit=crop&w=668&q=80");
+   width: 25%;
+   background-size: cover;
+   background-repeat: no-repeat;
+   height: 810px;
+ }
+
+ .main-side-top {
+   background-image: url("https://images.unsplash.com/photo-1498049860654-af1a5c566876?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ee039d16c1a1638867bb1cc95bf3b833&auto=format&fit=crop&w=1650&q=80");
+   height: 15%;
+   width: 100%;
+   background-size: cover;
+   transition: 3s ease;
+ }
+
+ .main-side-bottom {
+   border-top: 10px solid #000;
+   background-color: #fff;
+   width: 1070px;
+   height: 85%;
+   display: flex;
+   justify-content: space-around;
+ }
+
+ .main-side-bottom h1 {
    font-size: 40pt;
    text-emphasis: bold;
    margin-right: 350px;
