--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,9 +7,9 @@ All Jobs for <strong><%= @company.name %></strong>
 <ul>
   <% @jobs.each do |job| %>
   <li class=job_<%= job.id %>>
-    <%= link_to job.title, company_jobs_path(job) %>:
-    <%= link_to "Edit", edit_company_job_path(job) %>
-    <%= link_to "Delete", company_jobs_path(job), method: "delete" %>
+    <%= link_to job.title, company_jobs_path %>:
+    <%= link_to "Edit", edit_company_job_path %>
+    <%= link_to "Delete", company_jobs_path, method: "delete" %>
   </li>
   <% end %>
 </ul>
