--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,7 @@ All Jobs for <strong><%= @company.name %></strong>
 <ul>
   <% @jobs.each do |job| %>
   <li class=job_<%= job.id %>>
-    <%= link_to job.title, company_jobs_path(job) %>:
+    <%= link_to job.title, job_path(job) %>:
     <%= link_to "Edit", edit_job_path(job) %>
     <%= link_to "Delete", job_path(job), method: "delete" %>
   </li>
