Update styling to standardize across the board

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,13 +1,14 @@
-<head>
+<!-- <head>
   <title>Job Tracker</title>
   <link rel="stylesheet" type="text/css" href="../assets/stylesheets/application.css">
-</head>
+</head> -->
 <main class="main-container">
   <section class="main-left"></section>
   <section class="main-side">
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
+        <% render partial: "nav" %>
         <ul>
           <% @companies.each do |company| %>
           <li class=company_<%= company.id %>>
