--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,10 +1,20 @@
-All Jobs for <strong><%= @company.name %></strong>
+<main class="main-container">
+  <section class="main-left"></section>
+  <section class="main-side">
+    <section class="main-side-container">
+      <section class="main-side-top"></section>
+      <section class="main-side-bottom">
+        All Jobs for <strong><%= @company.name %></strong>
 
-<% @company.jobs.each do |job| %>
-  <ul>
-    <li><%= job.title %></li>
-    <li><%= job.description %></li>
-    <li><%= job.level_of_interest %></li>
-    <li><%= job.city %></li>
-  </ul>
-<% end %>
+        <% @company.jobs.each do |job| %>
+          <ul>
+            <li><%= job.title %></li>
+            <li><%= job.description %></li>
+            <li><%= job.level_of_interest %></li>
+            <li><%= job.city %></li>
+          </ul>
+        <% end %>
+      </section>
+    </section>
+  </section>
+</main>
