--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,13 @@
-<h2>Create a new job at <%= @company.name %> here!</h2>
+<main class="main-container">
+  <section class="main-left"></section>
+  <section class="main-side">
+    <section class="main-side-container">
+      <section class="main-side-top"></section>
+      <section class="main-side-bottom">
+        <h2>Create a new job at <%= @company.name %> here!</h2>
 
-<%= render partial: "form" %>
+        <%= render partial: "form" %>
+      </section>
+    </section>
+  </section>
+</main>
