--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,13 +1,23 @@
-Title: <%= @job.title %>
-<br>
+<main class="main-container">
+  <section class="main-left"></section>
+  <section class="main-side">
+    <section class="main-side-container">
+      <section class="main-side-top"></section>
+      <section class="main-side-bottom">
+        Title: <%= @job.title %>
+        <br>
 
-Description: <%= @job.description %>
-<br>
+        Description: <%= @job.description %>
+        <br>
 
-Level of Interest: <%= @job.level_of_interest %>
-<br>
+        Level of Interest: <%= @job.level_of_interest %>
+        <br>
 
-City: <%= @job.city %>
-<br>
+        City: <%= @job.city %>
+        <br>
 
-Company: <%= link_to @job.company.name, company_path(@job.company) %>
+        Company: <%= link_to @job.company.name, company_path(@job.company) %>
+      </section>
+    </section>
+  </section>
+</main>
