Work on styling

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,10 @@
-<head>
-  <title>Job Tracker</title>
-  <link rel="stylesheet" type="text/css" href="../assets/stylesheets/application.css">
-</head>
 <main class="home-container">
   <section class="home-main"></section>
   <section class="home-side">
     <section class="home-side-container">
       <section class="home-side-top"></section>
       <section class="home-side-bottom">
-        <h1> <%= link_to "Job Tracker", companies_path %></h1>
+        <h1> <%= link_to "Job Hunter", companies_path %></h1>
       </section>
     </section>
   </section>
