Work on JS animations

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,8 +4,11 @@
     <section class="home-side-container">
       <section class="home-side-top"></section>
       <section class="home-side-bottom">
-        <h1> <%= link_to "Job Hunter", companies_path %></h1>
+        <h1 class="home-side-bottom-h1"> <%= link_to "Job Hunter", companies_path %></h1>
       </section>
     </section>
   </section>
 </main>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="jquery.min.js"><\/script>')</script>
+<script type="text/javascript" src="application.js"></script>
