Work on building out CRUD for categories

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,15 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
-
+        <ul>
+          <% @categories.each do |category| %>
+          <li class=category_<%= category.id %>>
+            <%= link_to category.title, category_path(category) %>:
+            <%= link_to "Edit", edit_category_path(category) %>
+            <%= link_to "Delete", category_path(category), method: "delete" %>
+          </li>
+          <% end %>
+        </ul>
       </section>
     </section>
   </section>
