--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,16 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
-        
+        All Jobs for <strong><%= @category.title %></strong>
+
+        <% @category.jobs.each do |job| %>
+          <ul>
+            <li><%= job.title %></li>
+            <li><%= job.description %></li>
+            <li><%= job.level_of_interest %></li>
+            <li><%= job.city %></li>
+          </ul>
+        <% end %>
       </section>
     </section>
   </section>
