--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -4,7 +4,9 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
+        <h2>Edit <%= @category.title %> here!</h2>
 
+        <%= render partial: "form" %>
       </section>
     </section>
   </section>
