Full CRUD for categories

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -6,7 +6,7 @@
       <section class="main-side-bottom">
         <h2>Create a new job at <%= @company.name %> here!</h2>
 
-        <%= render partial: "form" %>
+        <p><%= render partial: "form" %></p>
       </section>
     </section>
   </section>
