Add migration for comments

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -17,6 +17,11 @@
         <br>
 
         Company: <%= link_to @job.company.name, company_path(@job.company) %>
+
+        Comments: <ul>
+          <% @job.comments.each do |comment| %>
+            <li><%= comment %></li>
+          <% end %>
       </section>
     </section>
   </section>
