Full comments functionality

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -21,7 +21,7 @@
 
         Comments:<br>
         <ul>
-        <% @job.comments.each do |comment| %>
+        <% @job.comments.reverse.each do |comment| %>
           <li><%= comment.body %></li>
         <% end %>
         </ul>
