--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -12,6 +12,14 @@
             <li><%= job.description %></li>
             <li><%= job.level_of_interest %></li>
             <li><%= job.city %></li>
+          </ul><br>
+          Contacts:<br>
+          <% @Company.contacts.each do |contact| %>
+            <ul>
+            <li><%= contact.name %></li>
+            <li><%= contact.position %></li>
+            <li><%= contact.email %></li>
+          <% end %>
           </ul>
         <% end %>
       </section>
