--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -10,9 +10,9 @@
         Contacts:<br>
         <% @company.contacts.each do |contact| %>
           <ul>
-            <li><%= contact.name %></li>
-            <li><%= contact.position %></li>
-            <li><%= contact.email %></li>
+            <li>Name: <%= contact.name %></li>
+            <li>Position: <%= contact.position %></li>
+            <li>Email: <%= contact.email %></li>
           </ul>
         <% end %><br>
 
