--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,7 +4,15 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
-
+        <h3>All Jobs</h3>
+          <% @jobs.each do |job| %>
+            <ul>
+              <li><%= link_to job.title, job_path(job) %></li>
+              <li><%= job.company.name %></li>
+              <li><%= job.level_of_interest %></li>
+              <li><%= job.city %></li>
+            </ul>
+          <% end %>
       </section>
     </section>
   </section>
