--- a/app/views/companies/_nav.html.erb
+++ b/app/views/companies/_nav.html.erb
@@ -1,2 +1,4 @@
-<nav class="nav">
-  
+<%= link_to "Companies", companies_path %>
+<%= link_to "Jobs", jobs_path %>
+<%= link_to "Categories", categories_path %>
+<%= link_to "Dashboard", dashboard_path %>
