--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -4,7 +4,9 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
-        <% render partial: "nav" %>
+        <nav class="nav">
+          <% render partial: "nav" %>
+        </nav>
         <ul>
           <% @companies.each do |company| %>
           <li class=company_<%= company.id %>>
