--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -98,9 +98,24 @@
  }
 
  .nav {
-   background-color: #898989;
-   width: 10%;
+   background: linear-gradient(#000, rgba(80, 80, 80, 0.6));
+   width: 100%;
    height: 50px;
+   display: flex;
+   justify-content: space-around;
+   align-items:center
+ }
+
+ .nav a {
+   color: #889572;
+ }
+
+ .nav a:hover {
+   color: #d8dbd1;
+ }
+
+ .nav a:visited {
+   color: #889572;
  }
 
  a {
@@ -114,6 +129,10 @@
 
  a:active {
    color: #5da271;
+ }
+
+ .company-card {
+   
  }
 
  .flash {
