--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -5,7 +5,10 @@
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
         <nav class="nav">
-          <% render partial: "nav" %>
+          <%= link_to "Companies", companies_path %>
+          <%= link_to "Jobs", jobs_path %>
+          <%= link_to "Categories", categories_path %>
+          <%= link_to "Dashboard", dashboard_path %>
         </nav>
         <ul>
           <% @companies.each do |company| %>
