--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -4,6 +4,12 @@
     <section class="main-side-container">
       <section class="main-side-top"></section>
       <section class="main-side-bottom">
+        <nav class="nav">
+          <%= link_to "Companies", companies_path %>
+          <%= link_to "Jobs", jobs_path %>
+          <%= link_to "Categories", categories_path %>
+          <%= link_to "Dashboard", dashboard_path %>
+        </nav>
         <h2>Create a new company here!</h2>
 
         <%= render partial: "form" %>
