--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,13 +82,11 @@
  }
 
  .main-side-bottom {
-   border-top: 10px solid #000;
    background-color: #fff;
    width: 1070px;
    height: 85%;
    display: flex;
-   flex-direction: column;
-   align-items: center;
+   flex-wrap: wrap;
    overflow: scroll;
  }
 
@@ -98,41 +96,36 @@
  }
 
  .nav {
-   background: linear-gradient(#000, rgba(80, 80, 80, 0.6));
+   background: linear-gradient(rgba(80, 80, 80, 0.9), #000);
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: space-around;
-   align-items:center
- }
-
- .nav a {
-   color: #889572;
- }
-
- .nav a:hover {
-   color: #d8dbd1;
- }
-
- .nav a:visited {
-   color: #889572;
+   align-items: center;
  }
 
  a {
+   color: #889572;
    text-decoration: none;
-   color: #898989;
  }
 
  a:hover {
-   color: #545c42;
+   color: #d8dbd1;
  }
 
- a:active {
-   color: #5da271;
+ a:visited {
+   color: #889572;
  }
 
  .company-card {
-   
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   width: 150px;
+   height: 150px;
+   background: linear-gradient(#898989, #fff);
+   margin: 10px;
  }
 
  .flash {
