--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,20 +3,20 @@
   <section class="main-side">
     <section class="main-side-container">
       <section class="main-side-top"></section>
+      <nav class="nav">
+        <%= link_to "Companies", companies_path %>
+        <%= link_to "Jobs", jobs_path %>
+        <%= link_to "Categories", categories_path %>
+        <%= link_to "Dashboard", dashboard_path %>
+      </nav>
       <section class="main-side-bottom">
-        <nav class="nav">
-          <%= link_to "Companies", companies_path %>
-          <%= link_to "Jobs", jobs_path %>
-          <%= link_to "Categories", categories_path %>
-          <%= link_to "Dashboard", dashboard_path %>
-        </nav>
         <ul>
           <% @companies.each do |company| %>
-          <li class=company_<%= company.id %>>
+          <div class="company-card">
             <%= link_to company.name, company_path(company) %>:
             <%= link_to "Edit", edit_company_path(company) %>
             <%= link_to "Delete", company_path(company), method: "delete" %>
-          </li>
+          </div>
           <% end %>
         </ul>
       </section>
