--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -86,7 +86,6 @@
    width: 1070px;
    height: 85%;
    display: flex;
-   flex-direction: row;
    flex-wrap: wrap;
    overflow: scroll;
  }
@@ -132,6 +131,7 @@
 
  .company-card a {
    font-size: 12pt;
+   position: relative;
  }
 
  .company-card a:hover {
