--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,2 +1,17 @@
-<h1>Errors#internal_server_error</h1>
-<p>Find me in app/views/errors/internal_server_error.html.erb</p>
+<main class="main-container">
+  <section class="main-left"></section>
+  <section class="main-side">
+    <section class="main-side-container">
+      <section class="main-side-top"></section>
+      <nav class="nav">
+        <%= link_to "Companies", companies_path %>
+        <%= link_to "Jobs", jobs_path %>
+        <%= link_to "Categories", categories_path %>
+        <%= link_to "Dashboard", dashboard_path %>
+      </nav>
+      <section class="main-side-bottom">
+        <h1>Easter Egg. Jk, the server is broke and the developer is in trouble.</h1>
+      </section>
+    </section>
+  </section>
+</main>
