--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Tags#index</h1>
-<p>Find me in app/views/tags/index.html.erb</p>
+<main class="main-container">
+  <section class="main-left"></section>
+  <section class="main-side">
+    <section class="main-side-container">
+      <section class="main-side-top"></section>
+      <nav class="nav">
+        <%= link_to "Companies", companies_path %>
+        <%= link_to "Jobs", jobs_path %>
+        <%= link_to "Categories", categories_path %>
+        <%= link_to "Dashboard", dashboard_path %>
+      </nav>
+      <section class="main-side-bottom">
+        <h3>All Jobs</h3>
+          <% @tags.each do |tag| %>
+            <ul>
+              <li><%= link_to tag.title, tag_path(tag) %></li>
+            </ul>
+          <% end %>
+      </section>
+    </section>
+  </section>
+</main>
