--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -2,5 +2,8 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
 
+  <%= f.label :job %>
+  <%= f.collection_select :job_id, Job.all, :id, :title %>
+
   <%= f.submit %>
 <% end %>
