Minor readability fixes

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,12 +11,12 @@
       </nav>
       <section class="main-side-bottom">
         <table>
-          <th>Company Name</th>
+          <th>Company</th>
           <th>Average Job Interest</th>
         <% @top_companies.each do |company| %>
           <tr>
           <td><%= company.name %></td>
-          <td><%= company.avg_interest.round %></td>
+          <td><%= company.average_interest.round %></td>
           </tr>
         <% end %>
         </table>
