--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,16 +10,16 @@
         <%= link_to "Dashboard", dashboard_path %>
       </nav>
       <section class="main-side-bottom">
-        All Jobs for <strong><%= @category.title %></strong>
-
-        <% @category.jobs.each do |job| %>
-          <ul>
-            <li><%= job.title %></li>
-            <li><%= job.description %></li>
-            <li><%= job.level_of_interest %></li>
-            <li><%= job.city %></li>
-          </ul>
-        <% end %>
+        <h1>All Jobs for <strong><%= @category.title %></strong></h1>
+        <section class="companies">
+          <% @category.jobs.each do |job| %>
+            <div class="company-card">
+              <%= link_to job.title, job_path(job) %><br>
+              Company: <%= job.company.name %><br>
+              Interest: <%= job.level_of_interest %><br>
+              City: <%= job.city %><br>
+            </div>
+          <% end %>
       </section>
     </section>
   </section>
