--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -8,6 +8,7 @@
         <%= link_to "Jobs", jobs_path %>
         <%= link_to "Categories", categories_path %>
         <%= link_to "Dashboard", dashboard_path %>
+        <%= link_to "Tags", tags_path %>
       </nav>
       <section class="main-side-bottom">
         <h1>Easter Egg. Jk, the server is broke and the developer is in trouble.</h1>
