--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,6 +8,7 @@
         <%= link_to "Jobs", jobs_path %>
         <%= link_to "Categories", categories_path %>
         <%= link_to "Dashboard", dashboard_path %>
+        <%= link_to "Tags", tags_path %>
       </nav>
       <section class="main-side-bottom">
         <h3>All Jobs</h3>
