--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -8,15 +8,17 @@
         <%= link_to "Jobs", jobs_path %>
         <%= link_to "Categories", categories_path %>
         <%= link_to "Dashboard", dashboard_path %>
+        <%= link_to "Tags", tags_path %>
       </nav>
       <section class="main-side-bottom">
-        <h3>All Jobs</h3>
+        <h1>All Tags</h1>
+        <section class="companies">
           <% @tags.each do |tag| %>
-            <ul>
-              <li><%= link_to tag.title, tag_path(tag) %></li>
+            <div class="company-card">
+              <%= link_to tag.title, tag_path(tag) %>
               <%= link_to "Edit", edit_tag_path(tag) %>
               <%= link_to "Delete", tag_path(tag), method: "delete" %>
-            </ul>
+            </div>
           <% end %>
       </section>
     </section>
