--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -8,9 +8,10 @@
         <%= link_to "Jobs", jobs_path %>
         <%= link_to "Categories", categories_path %>
         <%= link_to "Dashboard", dashboard_path %>
+        <%= link_to "Tags", tags_path %>
       </nav>
       <section class="main-side-bottom">
-        <h2>Create a new tag here!</h2>
+        <h2>Create a new tag here!</h2><br>
 
         <%= render partial: "form" %>
       </section>
